--- a/NoCaml/NoCaml.csproj
+++ b/NoCaml/NoCaml.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Attributes\FieldAttribute.cs" />
     <Compile Include="Attributes\ListAttribute.cs" />
     <Compile Include="BaseClasses\BaseDefinition.cs" />
+    <Compile Include="BaseClasses\IAudienced.cs" />
     <Compile Include="BaseClasses\UserControlField.cs" />
     <Compile Include="BaseClasses\ListDefinition.cs" />
     <Compile Include="BaseClasses\PageDefinition.cs" />
@@ -156,7 +157,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseGlobalSettings="False" BuildVersion_UpdateAssemblyVersion="False" BuildVersion_BuildVersioningStyle="None.None.DeltaBaseYearDayOfYear.TimeStamp" BuildVersion_UpdateFileVersion="True" />
+      <UserProperties BuildVersion_UpdateFileVersion="True" BuildVersion_BuildVersioningStyle="None.None.DeltaBaseYearDayOfYear.TimeStamp" BuildVersion_UpdateAssemblyVersion="False" BuildVersion_UseGlobalSettings="False" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
